hw5/part1/tests/prob1/provided/cart_invalid_method1.stderr
error[E0599]: no method named `checkout` found for struct `part1::prob1::cart::Empty` in the current scope
  --> tests/prob1/provided/cart_invalid_method1.rs:11:19
   |
11 |             empty.checkout();
   |                   ^^^^^^^^ method not found in `part1::prob1::cart::Empty`
